<resources>
    <string-array name="Tablas">

        <item>bebidas</item>
        <item>cereais e derivados</item>
        <item>froita</item>
        <item>legumes</item>
        <item>lácteos</item>
        <item>ovos</item>
        <item>sementes e froitos secos</item>
        <item>verduras</item>

    </string-array>


    <string name="app_name">Alimentación saudable</string>
    <string name="LM_Saludo">Benvido</string>
    <string name="LM_BT1">Consultar alimentos</string>
    <string name="LM_BT2">Consultar un menú</string>
    <string name="Tabla0">Todos</string>
    <string name="Tabla1">Bebidas</string>
    <string name="Tabla2">Cereais e derivados</string>
    <string name="Tabla3">Froita</string>
    <string name="Tabla4">Legumes</string>
    <string name="Tabla5">Lácteos</string>
    <string name="Tabla6">Ovos</string>
    <string name="Tabla7">Sementes e froitos secos</string>
    <string name="Tabla8">Verduras e hortalizas</string>
    <string name="Azucar">Azucres simples(g)</string>
    <string name="Grasa">Graxas saturadas(g)</string>
    <string name="Sodio">Sodio(mg)</string>
    <string name="MenuVacio">O menú está baleiro</string>
    <string name="Add">Engadir</string>
    <string name="Remove">Borrar</string>
    <string name="Empty">Baleirar</string>
    <string name="ToMenu">Vaia ao menú escollido</string>
    <string name="Calc">Calcular</string>
    <string name="MenuV">O menú é saudable</string>
    <string name="MenuA">O menú é medianamente saudable</string>
    <string name="MenuR">O menú non é saudable</string>

    <string name="title_activity_listado_principal">Lista de alimentos</string>
    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Pechar navegación</string>
    <string name="nav_header_title">Lista xeral de alimentos</string>
    <string name="nav_header_subtitle">Pode filtrar a lista polo seguintes criterios</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Opcions</string>
    <string name="title_activity_listado_alimentos">Listado de alimentos</string>
</resources>
