<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundfinal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Menus">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:id="@+id/LL_Azucar"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/texto_bonito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TW_M_General">

            <TextView
                android:layout_width="190dp"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:text="@string/Azucar"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/TW_M_Az"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_Grasa"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/texto_bonito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LL_Azucar">

            <TextView
                android:layout_width="190dp"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:text="@string/Grasa"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/TW_M_Gr"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_Sodio"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/texto_bonito"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LL_Grasa">

            <TextView
                android:layout_width="190dp"
                android:layout_height="30dp"
                android:layout_marginRight="20dp"
                android:text="@string/Sodio"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/TW_M_So"
                android:layout_width="90dp"
                android:layout_height="30dp"
                android:text=""
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18dp" />

        </LinearLayout>

        <Button
            android:id="@+id/TW_M_General"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/texto_bonito"
            android:text="@string/MenuVacio"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.113" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TW_Trazas">

            <Button
                android:id="@+id/BT_Menu_Add"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/texto_bonito"
                android:text="@string/Add" />

            <Button
                android:id="@+id/BT_Menu_Del"
                android:layout_width="120dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/texto_bonito"
                android:text="@string/Empty" />
        </LinearLayout>

        <TextView
            android:visibility="gone"
            android:id="@+id/TW_Trazas"
            android:layout_width="340dp"
            android:layout_height="73dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/texto_bonito"
            android:text="El menú contiene trazas de: "
            android:textSize="18dp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LL_Sodio" />

    </android.support.constraint.ConstraintLayout>

    <ListView
        android:id="@+id/LW_Menus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp" />


</LinearLayout>